--- a/src/app/companies/company-create/company-create.component.html
+++ b/src/app/companies/company-create/company-create.component.html
@@ -1,6 +1,6 @@
 <div id="overlay" *ngIf="isLoading"></div>
 <app-cc-loading [isLoading]="isLoading"></app-cc-loading>
-<section class="card">
+<section class="formCreate card nine90">
   <form #companyForm="ngForm">
     <div class="companyData">
       <h4>Company</h4>
