--- a/src/app/customers/customer-list/customer-list.component.scss
+++ b/src/app/customers/customer-list/customer-list.component.scss
@@ -1,67 +1,81 @@
 .customerHeader {
-  border: 1px solid lightgray;
-  padding: 12px 20px;
-  margin-bottom: 10px;
-  display: flex;
-  flex-direction: row;
+    border: 1px solid lightgray;
+    padding: 12px 20px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: row;
 }
 
 .customerItem.title {
-  flex: 2;
+    flex: 2;
 }
 
 .customerItem.link {
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-  display: inline-block;
-  text-align: center;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    display: inline-block;
+    text-align: center;
 }
 
 .fa-pencil-alt {
-  color: green;
+    color: green;
 }
 
 .fa-trash-alt {
-  color: red;
+    color: red;
+}
+
+.noList {
+  text-align: left;
+  padding: 10px;
 }
 
 .customerListContainer {
-  position: relative;
+    position: relative;
+    .container {
+        text-align: left;
+        padding: 0;
+    }
+    .flex1 {
+        padding: 10px;
+    }
 }
 
 .customerListContainer .add {
-margin-bottom: 12px;
+    margin-bottom: 12px;
 }
 
 .customerListContainer table {
-  background: white;
+    background: white;
 }
 
-.customerListContainer table td, .customerListContainer table th {
-  padding: 12px 10px;
+.customerListContainer table td,
+.customerListContainer table th {
+    padding: 12px 10px;
 }
 
-.customerListContainer table td.small, .customerListContainer table th.small {
-  width: 10%;
-  text-align: center;
+.customerListContainer table td.small,
+.customerListContainer table th.small {
+    width: 10%;
+    text-align: center;
 }
 
 .customerListContainer table th.small.capitalize {
-  text-transform: capitalize;
+    text-transform: capitalize;
 }
 
 .customerListContainer table th.tableLink {
-  cursor: pointer;
-  position: relative;
+    cursor: pointer;
+    position: relative;
 }
 
 .customerListContainer table th.tableLink span {
-  display: inline-block;
+    display: inline-block;
 }
 
 .customerListContainer table th.tableLink span i {
-  position: absolute;
-  right: 10px;
-  top: 12px;
+    position: absolute;
+    right: 10px;
+    top: 12px;
 }
