--- a/src/app/products/product-create/product-create.component.html
+++ b/src/app/products/product-create/product-create.component.html
@@ -1,6 +1,6 @@
 <div id="overlay" *ngIf="isLoading"></div>
 <app-cc-loading [isLoading]="isLoading"></app-cc-loading>
-<section class="card" *ngIf="!isLoading">
+<section class="formCreate card nine90" *ngIf="!isLoading">
   <form #productForm="ngForm">
     <div class="productData">
       <h4>Product</h4>
@@ -26,7 +26,7 @@
             <app-cc-toggle (toggleItem)="setToggleItem($event)" [label]="productLabels.isTopPick" [item]="product.isTopPick"></app-cc-toggle>
         </div>
         <div class="flex1">
-          <div class="labelOnTop">
+          <div class="ccToggle">
             <label class="cashbackLabel">{{productLabels.cashback}}</label>
             <input class="cashback" type="number" [ngModel]="product?.cashback" name="cashback" #cashback="ngModel" min="0">
         </div>
@@ -55,7 +55,7 @@
     <div [hidden]="productForm.valid || productForm.pristine" class="alert alert-danger">
       {{ productMessages.allFields }}
     </div>
-    <div class="productButtons right">
+    <div class="formButtons right">
       <button type="button" class="cancel right capitalize" (click)="onCancel(productForm)">{{keys.cancel}}</button>
       <button type="button" class="ok" (click)="onSaveProduct(productForm)">{{productLabels.saveProduct}}</button>
     </div>
