--- a/src/styles.scss
+++ b/src/styles.scss
@@ -273,6 +273,7 @@ label {
   text-align: left;
   position: absolute;
   z-index: 3;
+  min-width: 200px;
 }
 .alert-danger {
   background: #F2DEDE;
