--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -11,11 +11,19 @@
   </div>
   <table *ngIf="customers && customers.length > 0">
     <tr>
+      <th>{{customerMessages.name}}</th>
       <th>{{customerMessages.email}}</th>
+      <th>{{customerMessages.product}}</th>
+      <th>{{customerMessages.endDate}}</th>
+      <th class="small capitalize">{{ keys.edit }}</th>
       <th class="small capitalize">{{ keys.delete }}</th>
     </tr>
     <tr *ngFor="let customer of customers">
+      <td>{{ customer.firstName }} {{ customer.lastName }}</td>
       <td>{{ customer.email }}</td>
+      <td>{{ customer.product.name }}</td>
+      <td><span *ngIf="customer.product.endDate">{{ customer.product.endDate | date }}</span><span *ngIf="!customer.product.endDate">{{customerMessages.NA}}</span></td>
+      <td class="small"><a class="customerItem link" *ngIf="isLoggedIn" [routerLink]="['/customers/edit', customer.id]"><i class="fas fa-pencil-alt"></i></a></td>
       <td class="small"><a class="customerItem link" *ngIf="isLoggedIn" (click)="openDeleteModal(customer)"><i class="fas fa-trash-alt"></i></a></td>
     </tr>
   </table>
