--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -21,6 +21,7 @@
           <span>{{ productLabels.yearlyCost }}</span>
           <span class="right"><i class="linkIcon fas" [ngClass]="{ 'fa-chevron-down': !sortAscYearlyCost, 'fa-chevron-up': sortAscYearlyCost }"></i></span>
       </th>
+      <th>{{ productLabels.endDate }}</th>
       <th class="small capitalize">{{ keys.edit }}</th>
       <th class="small capitalize">{{ keys.delete }}</th>
     </tr>
@@ -29,6 +30,7 @@
       <td>{{ product.company.name }}</td>
       <td class="capitalize">{{ product.fuelType }}</td>
       <td>{{ product.totalYearlyCost }}</td>
+      <td><span *ngIf="product.endDate">{{ product.endDate | date }}</span><span *ngIf="!product.endDate">{{productLabels.NA}}</span></td>
       <td class="small"><a class="productItem link" *ngIf="isLoggedIn" [routerLink]="['/products/edit', product.id]"><i class="fas fa-pencil-alt"></i></a></td>
       <td class="small"><a class="productItem link" *ngIf="isLoggedIn" (click)="openDeleteModal(product)"><i class="fas fa-trash-alt"></i></a></td>
     </tr>
