--- a/src/app/pages/results/results.component.html
+++ b/src/app/pages/results/results.component.html
@@ -5,9 +5,9 @@
   <form #resultsForm="ngForm">
     <div class="container bgContrast">
       <div class="nine90 imageFilter">
-        <app-cc-image-filter (selectImageFilter)="setImageFilter($event)" [type]="keys.currentCompany" [imageFilter]="currentCompany"></app-cc-image-filter>
-        <app-cc-image-filter (selectImageFilter)="setImageFilter($event)" [type]="keys.bigCompany" [imageFilter]="bigCompany"></app-cc-image-filter>
-        <app-cc-image-filter (selectImageFilter)="setImageFilter($event)" [type]="keys.none" [imageFilter]="none"></app-cc-image-filter>
+        <app-cc-image-filter (selectImageFilter)="setImageFilter($event)" [type]="keys.currentCompany" [imageFilter]="imageFilterCurrentCompany"></app-cc-image-filter>
+        <app-cc-image-filter (selectImageFilter)="setImageFilter($event)" [type]="keys.bigCompany" [imageFilter]="imageFilterBigCompany"></app-cc-image-filter>
+        <app-cc-image-filter (selectImageFilter)="setImageFilter($event)" [type]="keys.none" [imageFilter]="imageFilterNone"></app-cc-image-filter>
       </div>
     </div>
     <div class="nine90">
@@ -19,28 +19,28 @@
           {{ resultsLabels.noHeading }}
         </div>
       </div>
-      <div class="labelOnTop">
+      <!-- <div class="labelOnTop">
         <label>{{resultsLabels.subHeading}}</label>
         <input type="text" [ngModel]="results?.subHeading" name="subHeading" #subHeading="ngModel" required>
         <div [hidden]="subHeading.valid || subHeading.pristine" class="alert alert-danger">
           {{ resultsLabels.noSubHeading }}
         </div>
-      </div>
-      <div class="labelOnTop">
+      </div> -->
+      <!-- <div class="labelOnTop">
         <label>{{resultsLabels.personalProjectionMessage}}</label>
         <input type="text" [ngModel]="results?.personalProjectionMessage" name="personalProjectionMessage" #personalProjectionMessage="ngModel"
           required>
         <div [hidden]="personalProjectionMessage.valid || personalProjectionMessage.pristine" class="alert alert-danger">
           {{ resultsLabels.noPersonalProjectionMessage }}
         </div>
-      </div>
-      <div class="labelOnTop">
+      </div> -->
+      <!-- <div class="labelOnTop">
         <label>{{resultsLabels.fullRangeMessage}}</label>
         <input type="text" [ngModel]="results?.fullRangeMessage" name="fullRangeMessage" #fullRangeMessage="ngModel" required>
         <div [hidden]="fullRangeMessage.valid || fullRangeMessage.pristine" class="alert alert-danger">
           {{ resultsLabels.noFullRangeMessage }}
         </div>
-      </div>
+      </div> -->
       <div class="resultsButtons right">
         <button type="button" class="cancel right capitalize" (click)="onCancel(resultsForm)">Cancel</button>
         <button type="button" class="ok" (click)="onSaveResults(resultsForm)">Save</button>
